Avoid repeated calls to binary Operations#union()
This fix generates a much smaller automaton.

Signed-off-by: Michael Froh <froh@amazon.com>